# datadiddler-kernel

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: file-contracts.md  kernel-overview.md  lens-interface-contract.md
src/datadiddler_kernel/: harness.py
src/datadiddler_kernel/schema/: material_lens_system.schema.frozen.json
