[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datadiddler-lens-template"
version = "0.1.0"
description = "Canonical template for DataDiddler lens repositories."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MettleForgeLab" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]